# dictate

./: README.md  hammerspoon.lua  pyproject.toml
src/dictate/: cli.py
src/whisper_dictation/: cli.py
