[project]
name = "whisper-dictation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ashish-spext", email = "ashish@spext.co" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
whisper-dictation = "whisper_dictation:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
