[project]
name = "dictate"
version = "0.1.0"
description = "macOS dictation utility with swappable transcription backends"
readme = "README.md"
authors = [
    { name = "ashish-spext", email = "ashish@spext.co" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dictate = "dictate:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
